src/apps/netbird-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbird-reverse-proxy
  namespace: netbird-proxy
spec:
  selector:
    app: netbird-reverse-proxy
  ports:
    - name: minecraft
      port: 25565
      targetPort: 25565
